# LinkedList

./: CMakeLists.txt  main.c
inc/: double_linked_list.h
src/: double_linked_list.c
